--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
 name: gcn551
 dependencies:
   - python==3.6
-  - numpy
-  - torch
-  - scipy
-  - networkx
+  - numpy==1.16
+  - torch==1.0
+  - scipy==1.2
+  - networkx==2.2
